# adk_mcp

./: .env  .gitignore  README.md  pyproject.toml
adk_mcp_samples/: agent.py
